[package]
name = "webscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
async-tcp = "0.2.0"
parse_duration = "2.1.1"